examples-generated/lb/route.yaml
apiVersion: lb.scaleway.upbound.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: lb/v1alpha1/route
  labels:
    testing.upbound.io/example-name: rt01
  name: rt01
spec:
  forProvider:
    backendIdSelector:
      matchLabels:
        testing.upbound.io/example-name: bkd01
    frontendIdSelector:
      matchLabels:
        testing.upbound.io/example-name: frt01
    matchSni: scaleway.com

---
